--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@babel/core": "^7.25.2",
     "@babel/node": "^7.25.0",
     "@babel/preset-env": "^7.25.4",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "express-ejs-layouts": "^2.5.1",
     "jsonwebtoken": "^9.0.2",
+    "method-override": "^3.0.0",
     "mysql2": "^3.11.3",
     "nodemon": "^3.1.4"
   }
